@@ -1,3 +1,10 @@
+2005-12-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/25023
+	* config/i386/i386.c (ix86_force_to_memory): Always use
+	SImode push for HImode in -m32.
+	(ix86_free_from_memory): Likewise.
+
 2005-12-14  Richard Sandiford  <richard@codesourcery.com>
 
 	* gcc/config/arm/arm.md: Provide a big-endian version of the
